@@ -5,15 +5,21 @@ mbes.cmds.tphere - permission to use /tphere command.
 
 //Mod Permissions
 mbes.mod.mute - permission to use /mute
+mbes.mod.unmute - permission to use /unmute
 mbes.mod.kickall - permission to use /kickall command.
 mbes.mod.sudo - permission to use /sudo command.
 mbes.mod.addmoney - permission to use /addmoney
 mbes.mod.rmvmoney - permission to use /rmvmoney
 mbes.mod.resetmoney - permission to use /resetmoney
-
+mbes.mod.vwreport - permission to use /vwreport
+mbes.mod.delreport - permission to use /delreport
 
 //Pm Permissions
 mbes.pm - permission to use /pm,/unblock,/block,/blockall,/unblockall
 
 //Money Permission
 mbes.money - permission to use /balance,/pay
+
+//Report Permissions
+mbes.cmds.report - permission to use /report
+
